correçao do pt-BR

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 
 <head>
-    <meta charset="pt-bt">
+    <meta charset="pt-BR">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Descubra o charme do Rancho Belle Vue, um chalé acolhedor nas montanhas. Reserve já sua estadia!">
     <title>Rancho Belle Vue</title>
