substituiçao do link para airbnb para whatsapp na sessao de preços e condiçoes

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                             <i class="bi bi-calendar-week me-2"></i> De domingo á quinta
                         </h5>
                         <p><strong>R$690,00</strong><br> - Diária p/ 2 pessoas</p>
-                        <a href="https://www.airbnb.com.br/rooms/1269122600830270563?guests=1&amp;adults=1&amp;s=66&amp;source=embed_widget" class="btn btn-success w-100">RESERVAR AGORA</a>
+                        <a href="https://wa.me/48996777239?text=Olá,%20estou%20interessado%20em%20uma%20hospedagem.%20Poderia%20me%20passar%20mais%20informações?" class="btn btn-success w-100">RESERVAR AGORA</a>
                     </div>
                 </div>
             </div>
@@ -375,7 +375,7 @@
                             <i class="bi bi-calendar-week me-2"></i> Sexta e sábado
                         </h5>
                         <p><strong>R$790,00</strong><br> - Diária p/ 2 pessoas</p>
-                        <a href="https://www.airbnb.com.br/rooms/1269122600830270563?guests=1&amp;adults=1&amp;s=66&amp;source=embed_widget" class="btn btn-success w-100">RESERVAR AGORA</a>
+                        <a href="https://wa.me/48996777239?text=Olá,%20estou%20interessado%20em%20uma%20hospedagem.%20Poderia%20me%20passar%20mais%20informações?" class="btn btn-success w-100">RESERVAR AGORA</a>
                     </div>
                 </div>
             </div>
