--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 
 <head>
-    <meta charset="pt-BR">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Descubra o charme do Rancho Belle Vue, um chalé acolhedor nas montanhas. Reserve já sua estadia!">
     <title>Rancho Belle Vue</title>
@@ -361,7 +361,7 @@
                         <h5 class="card-title d-flex align-items-center" style="color: #6c7b58;">
                             <i class="bi bi-calendar-week me-2"></i> De domingo á quinta
                         </h5>
-                        <p><strong>R$690,00</strong><br> - Diária p/ 2 pessoas</p>
+                        <p><strong>R$790,00</strong><br> - Diária p/ 2 pessoas</p>
                         <a href="https://wa.me/48996777239?text=Olá,%20estou%20interessado%20em%20uma%20hospedagem.%20Poderia%20me%20passar%20mais%20informações?" class="btn btn-success w-100">RESERVAR AGORA</a>
                     </div>
                 </div>
@@ -374,7 +374,7 @@
                         <h5 class="card-title d-flex align-items-center" style="color: #6c7b58;">
                             <i class="bi bi-calendar-week me-2"></i> Sexta e sábado
                         </h5>
-                        <p><strong>R$790,00</strong><br> - Diária p/ 2 pessoas</p>
+                        <p><strong>R$890,00</strong><br> - Diária p/ 2 pessoas</p>
                         <a href="https://wa.me/48996777239?text=Olá,%20estou%20interessado%20em%20uma%20hospedagem.%20Poderia%20me%20passar%20mais%20informações?" class="btn btn-success w-100">RESERVAR AGORA</a>
                     </div>
                 </div>
